<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_selector"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/navigation_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_selector"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/navigation_myPosts"
        android:title="@string/my_posts"
        android:icon="@drawable/ic_my_posts_selector"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_selector"
        app:showAsAction="ifRoom"/>


</menu>