<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.fragments.CreateAccountFragment">

    <TextView
        android:id="@+id/fca_fragmentTitleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        style="@style/BoldExtraLargeText"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fca_fullnameTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/InputBoxLayoutStyle"
        app:startIconDrawable="@drawable/ic_person_filled"
        app:startIconTint="@color/helper"
        app:counterMaxLength="25"
        app:counterEnabled="true"
        app:counterTextAppearance="@style/MediumSmallText"
        app:counterTextColor="@color/helper"
        app:layout_constraintTop_toBottomOf="@id/fca_fragmentTitleTV"
        app:layout_constraintEnd_toEndOf="@id/fca_fragmentTitleTV"
        app:layout_constraintStart_toStartOf="@id/fca_fragmentTitleTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fca_fullnameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:background="@drawable/bg_primary_dark"
            style="@style/InputBoxEditTextStyle"
            android:hint="@string/fullname"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fca_pickAvatarTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_an_avatar"
        style="@style/RegularTitleText"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/fca_fragmentTitleTV"
        app:layout_constraintEnd_toEndOf="@id/fca_fragmentTitleTV"
        app:layout_constraintTop_toBottomOf="@id/fca_fullnameTIL"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fca_continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/fca_pickAvatarTV" >

            <GridLayout
                android:id="@+id/fcs_avatarContainerGL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"/>

    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fca_continueBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        style="@style/BlueButtonStyle"
        android:text="@string/continue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/fca_fragmentTitleTV"
        app:layout_constraintEnd_toEndOf="@id/fca_fragmentTitleTV"/>

    <ProgressBar
        android:id="@+id/fca_creatingAccountPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:visibility="gone"
        android:alpha="0"
        android:indeterminateTint="@color/primary"
        app:layout_constraintStart_toStartOf="@id/fca_continueBtn"
        app:layout_constraintEnd_toEndOf="@id/fca_continueBtn"
        app:layout_constraintTop_toTopOf="@id/fca_continueBtn"
        app:layout_constraintBottom_toBottomOf="@id/fca_continueBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>