<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".posts_management.PostDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apd_appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:liftOnScrollColor="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/apd_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/post"
            app:titleTextAppearance="@style/BoldLargeText"
            app:navigationIcon="@drawable/ic_back_navigation"
            app:navigationIconTint="@color/secondary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark"/>
        
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:id="@+id/apd_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <GridLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/apd_avatarIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/tmep"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/image_desc"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowSpan="2"/>

            <TextView
                android:id="@+id/apd_fullnameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:text="Anurag Rajput"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_column="1"
                android:layout_row="0"
                style="@style/BoldTitleText"/>

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/dominant_circle"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_column="2"
                android:layout_row="0" />

            <TextView
                android:id="@+id/apd_uploadTimeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19h"
                android:textColor="@color/dominant"
                android:layout_gravity="start|center_vertical"
                android:layout_column="3"
                android:layout_row="0"
                style="@style/RegularTitleText"/>

            <TextView
                android:id="@+id/apd_movieTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Game of Thrones"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="start|center_vertical"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnSpan="3"
                style="@style/MediumLargeText"/>

            <TextView
                android:id="@+id/apd_movieDescriptionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="20dp"
                android:text="This is the best series of HBO Production house. Jon Snow is Aegon Targarean."
                style="@style/RegularText"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_columnSpan="3"/>

            <TextView
                android:id="@+id/apd_movieGenresTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="Action | Drama | Adult | History Drama | Horror"
                android:textColor="@color/dominant"
                android:fontFamily="@font/poppins_medium"
                android:textSize="13sp"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_columnSpan="3"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/apd_postImagesVP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:layout_columnSpan="4"/>

            <TextView
                android:id="@+id/apd_imageIndicatorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/5"
                android:background="@drawable/bg_secondary_semi_transparent"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:layout_gravity="end"
                android:layout_marginEnd="70dp"
                android:layout_column="3"
                android:layout_row="4"/>

            <LinearLayout
                android:id="@+id/apd_actionContainerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginEnd="70dp"
                android:layout_column="1"
                android:layout_row="5"
                android:layout_columnSpan="3">

                <CheckBox
                    android:id="@+id/apd_likeCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120K"
                    android:button="@drawable/ic_like_selector"
                    app:buttonTint="@color/dominant_to_red_color"
                    android:textColor="@color/dominant_to_red_color"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="13sp"/>

                <CheckBox
                    android:id="@+id/apd_commentCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13.5k"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:button="@drawable/ic_comment"
                    android:textColor="@color/dominant"
                    app:buttonTint="@color/dominant"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="13sp"/>

                <CheckBox
                    android:id="@+id/apd_bookmarkCB"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/ic_bookmark_selector"
                    app:buttonTint="@color/dominant_to_accent_color"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dominant"
                android:layout_columnSpan="4"
                android:layout_column="0"
                android:layout_row="6"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/apd_commentContainerRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginBottom="100dp"
                android:orientation="vertical"
                android:layout_column="0"
                android:layout_row="7"
                android:layout_columnSpan="4"/>


        </GridLayout>

    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adp_commentTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputBoxLayoutStyle"
        app:errorEnabled="false"
        android:layout_gravity="bottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adp_commentET"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingEnd="100dp"
            android:paddingStart="10dp"
            android:gravity="top"
            android:background="@drawable/bg_primary_dark"
            style="@style/InputBoxEditTextStyle"
            android:hint="@string/post_your_reply"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/adp_replyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        style="@style/AccentSmallButtonStyle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="0dp"
        android:layout_gravity="bottom|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>